--- a/views/error.ejs
+++ b/views/error.ejs
@@ -22,10 +22,12 @@
   </nav>
   
  <div class="row">
-<h1>Hello Boss, Password Thappu</h1>
-<h3><%= message %></h3>
+<h1>Username or password is incorrect.</h1>
  </div>
-  
+ <div class="row"></div>
+ <div class="row">
+   <input class="btn waves-effect waves-light" action="action" onclick="window.history.go(-1); return false;" type="button" value="Back" />
+ </div>
   
   
   <!--  Scripts-->
