--- a/views/dashboardClub.ejs
+++ b/views/dashboardClub.ejs
@@ -23,44 +23,41 @@
     <div class="row"></div>
     <div class="row">
         
-        <div class="col s12 m12 l4">
+      <div class="col s12 m12 l4">
         <div class="card">
             <div class="card-image waves-effect waves-block waves-light">
               <i class="large material-icons" style="padding: 15px">account_balance</i>
-            </div>
-            <div class="card-content">
-              <span class="card-title activator grey-text text-darken-4">Sudhamani Hall<i class="material-icons right">chevron_right</i></span>
-              <p style="display:none; "><a href="/school_reg">Click here!</a></p>
-                <p>Book Now!</p>
-            </div>
-        </div>
-        </div>
-        
-        <div class="col s12 m12 l4">
-          <div class="card">
-              <div class="card-image waves-effect waves-block waves-light">
-                <i class="large material-icons" style="padding: 15px">account_balance</i>
-              </div>
-              <div class="card-content">
-                <span class="card-title activator grey-text text-darken-4">Amriteshwari Hall<i class="material-icons right">chevron_right</i></span>
-                <p style="display:none; "><a href="/school_reg">Click here!</a></p>
-                  <p>Book Now!</p>
-              </div>
+             </div>
+           <div class="card-content">
+              <span class="card-title activator grey-text text-darken-4"><a href="/SudhamaniHallInfo">Sudhamani Hall</a><i class="material-icons right">chevron_right</i></span>
+              <p style="display:none; "></p>
           </div>
-          </div>
+        </div>
+       </div>
         
-            <div class="col s12 m12 l4">
-              <div class="card">
-                  <div class="card-image waves-effect waves-block waves-light">
-                    <i class="large material-icons" style="padding: 15px">account_balance</i>
-                  </div>
-                  <div class="card-content">
-                    <span class="card-title activator grey-text text-darken-4">Vyasa Hall<i class="material-icons right">chevron_right</i></span>
-                    <p style="display:none; "><a href="/school_reg">Click here!</a></p>
-                      <p>Book Now!</p>
-                  </div>
-              </div>
-              </div>
+       <div class="col s12 m12 l4">
+        <div class="card">
+            <div class="card-image waves-effect waves-block waves-light">
+              <i class="large material-icons" style="padding: 15px">account_balance</i>
+             </div>
+           <div class="card-content">
+              <span class="card-title activator grey-text text-darken-4"><a href="/AmriteshwariHallInfo">Amriteshwari Hall</a><i class="material-icons right">chevron_right</i></span>
+              <p style="display:none; "></p>
+          </div>
+        </div>
+       </div>
+        
+       <div class="col s12 m12 l4">
+        <div class="card">
+            <div class="card-image waves-effect waves-block waves-light">
+              <i class="large material-icons" style="padding: 15px">account_balance</i>
+             </div>
+           <div class="card-content">
+              <span class="card-title activator grey-text text-darken-4"><a href="/VyasaHallInfo">Vyasa Hall</a><i class="material-icons right">chevron_right</i></span>
+              <p style="display:none; "></p>
+          </div>
+        </div>
+       </div>
         
                 </div>
     
@@ -70,55 +67,59 @@
         <div class="card">
             <div class="card-image waves-effect waves-block waves-light">
               <i class="large material-icons" style="padding: 15px">account_balance</i>
-            </div>
-            <div class="card-content">
-              <span class="card-title activator grey-text text-darken-4">Rama Hall<i class="material-icons right">chevron_right</i></span>
-              <p style="display:none; "><a href="/school_reg">Click here!</a></p>
-                <p>Book Now!</p>
-            </div>
+             </div>
+           <div class="card-content">
+              <span class="card-title activator grey-text text-darken-4"><a href="/KrishnaHallInfo">Krishna Hall</a><i class="material-icons right">chevron_right</i></span>
+              <p style="display:none; "></p>
+          </div>
         </div>
+       </div>
+
+       <div class="col s12 m12 l4">
+        <div class="card">
+            <div class="card-image waves-effect waves-block waves-light">
+              <i class="large material-icons" style="padding: 15px">account_balance</i>
+             </div>
+           <div class="card-content">
+              <span class="card-title activator grey-text text-darken-4"><a href="/RamaHallInfo">Rama Hall</a><i class="material-icons right">chevron_right</i></span>
+              <p style="display:none; "></p>
+          </div>
         </div>
+       </div>
+
         <div class="col s12 m12 l4">
-          <div class="card">
-              <div class="card-image waves-effect waves-block waves-light">
-                <i class="large material-icons" style="padding: 15px">account_balance</i>
-              </div>
-              <div class="card-content">
-                <span class="card-title activator grey-text text-darken-4">Krishna Hall<i class="material-icons right">chevron_right</i></span>
-                <p style="display:none; "><a href="/school_reg">Click here!</a></p>
-                  <p>Book Now!</p>
-              </div>
+        <div class="card">
+            <div class="card-image waves-effect waves-block waves-light">
+              <i class="large material-icons" style="padding: 15px">account_balance</i>
+             </div>
+           <div class="card-content">
+              <span class="card-title activator grey-text text-darken-4"><a href="/ValmikiHallInfo">Valmiki Hall</a><i class="material-icons right">chevron_right</i></span>
+              <p style="display:none; "></p>
           </div>
+        </div>
+       </div>
+
+         <div class="col s12 m12 l4">
+        <div class="card">
+            <div class="card-image waves-effect waves-block waves-light">
+              <i class="large material-icons" style="padding: 15px">account_balance</i>
+             </div>
+           <div class="card-content">
+              <span class="card-title activator grey-text text-darken-4"><a href="/E-LearningHallInfo">E-Learning Hall</a><i class="material-icons right">chevron_right</i></span>
+              <p style="display:none; "></p>
           </div>
-          <div class="col s12 m12 l4">
-            <div class="card">
-                <div class="card-image waves-effect waves-block waves-light">
-                  <i class="large material-icons" style="padding: 15px">account_balance</i>
-                </div>
-                <div class="card-content">
-                  <span class="card-title activator grey-text text-darken-4">Valmiki Hall<i class="material-icons right">chevron_right</i></span>
-                  <p style="display:none; "><a href="/school_reg">Click here!</a></p>
-                    <p>Book Now!</p>
-                </div>
-            </div>
-            </div>
+        </div>
+       </div>
             
-            <div class="col s12 m12 l4">
-              <div class="card">
-                  <div class="card-image waves-effect waves-block waves-light">
-                    <i class="large material-icons" style="padding: 15px">account_balance</i>
-                  </div>
-                  <div class="card-content">
-                    <span class="card-title activator grey-text text-darken-4">E-Learning Hall<i class="material-icons right">chevron_right</i></span>
-                    <p style="display:none; "><a href="/school_reg">Click here!</a></p>
-                      <p>Book Now!</p>
-                  </div>
-              </div>
-              </div>
+       
                            
               <div class="col s12 m12 l4" id="aaa" >
                 <a class="waves-effect waves-light btn-large" href="request"><i class="material-icons right">send</i>Request Form</a>
-              </div>
+        
+                <div class="row"></div>
+                  <input class="btn waves-effect waves-light" action="action" onclick="window.history.go(-1); return false;" type="button" value="Back" />
+                </div>
+              
               
             
 </div>
