--- a/views/pfacility.ejs
+++ b/views/pfacility.ejs
@@ -38,7 +38,7 @@
           <div class="row">
 
             <div class="row">
-              <h3 class="center">Dean's
+              <h3 class="center">Facility's
                 <br>Pending Request List</h3>
 
             </div>
@@ -101,26 +101,19 @@
                         <td> Event Name :
                           <%= res[i].EventName  %>
                         </td>
-                      <!--  <form action="/grantPermission" method="post">
-                        <br>
+
+                       <!-- <br>
                             <input name="ap<%=res[i].rid%>" type="radio" id="<%=res[i].rid%>Approved" value="1" />
                             <label for="<%=res[i].rid%>Approved">Approved</label>
                             <br> 
                             <input name="ap<%=res[i].rid%>" type="radio" id="<%=res[i].rid%>Rejected" value="2" />
                             <label for="<%=res[i].rid%>Rejected">Rejected</label>    
                         <br> 
-                        <!--button class="btn waves-effect waves-light" type="submit">Done
-                          <i class="material-icons right">send</i>
-                        </button>
-                        </form>-->
-                        
-                        
+                        "Rejected<%= res[i].rid  %>">Rejected</option>
                              
                   
-                      
-
-                    
-                      <form action="/grantPermission" method="post">
+                      -->
+                      <form action="/grantPermission" method="get">
                       <div class="row">
                                   <div class="input-field col s12">
                                       <select name="status">
@@ -136,16 +129,11 @@
                                     </button>
                                     
                               </div>
-                            </form> 
+                            </form>
                                           
                       </tr>
                     </div>
                     <% } %>
-
-                    <a href=""<button class="btn waves-effect waves-light" type="submit" href="#">Done
-                      <i class="material-icons right">send</i>
-                    </button></a>
-
 
                       </table>
                       <div class="row"></div>
