--- a/views/request.ejs
+++ b/views/request.ejs
@@ -119,9 +119,13 @@
       
       <div class="row">
         
-  <button class="btn waves-effect waves-light" type="submit" >Submit
+    <button class="btn waves-effect waves-light" type="submit" >Submit
       <i class="material-icons right">send</i>
     </button>
+    <div class="row"></div>
+    <div class="row">
+      <input class="btn waves-effect waves-light" action="action" onclick="window.history.go(-1); return false;" type="button" value="Back" />
+    </div>
       </div>
       </form>
 
